# safe_cpp

Solutions/2_Safe_Cpp/: CMakeLists.txt  Count.cpp  Erase.cpp  IntegralShift.cpp  Makefile  Meter_Assembly.cpp  Meter_Cpp17.cpp  Meter_Cpp20.cpp  RangesRefactoring_Animals.cpp  RangesRefactoring_Birthday.cpp  RangesRefactoring_Countries.cpp  RangesRefactoring_Recipes.cpp  Ranges_constexpr.cpp  StrongType_Assembly.cpp  StrongType_Cpp17.cpp  StrongType_Cpp20.cpp  StrongType_Cpp23.cpp  ToInt.cpp  UniquePtr_constexpr.cpp
Tasks/: CMakeLists.txt  Makefile
Tasks/2_Safe_Cpp/: AddressSanitizer.cpp  CMakeLists.txt  CppCheck.cpp  Erase.cpp  Makefile  Meter.cpp  Meter_Assembly.cpp  RangesRefactoring_Animals.cpp  RangesRefactoring_Birthday.cpp  RangesRefactoring_Countries.cpp  RangesRefactoring_Recipes.cpp  Ranges_constexpr.cpp  StrongType.cpp  StrongType1.cpp  StrongType2.cpp  StrongType3.cpp  StrongType_Assembly.cpp  ToInt.cpp  UniquePtr_constexpr.cpp
